syntax = "proto3";
package proto.powergate.v1;

option go_package = "github.com/textileio/powergate/proto/powergate/v1";

import "ffs/rpc/rpc.proto";

// Wallet

message BalanceRequest {
  string address = 1;
}

message BalanceResponse {
  uint64 balance = 1;
}

// Jobs

message StorageConfigForJobRequest {
  string job_id = 1;
}

message StorageConfigForJobResponse {
  ffs.rpc.StorageConfig storage_config = 1;
}

service PowergateService {
  // Wallet
  rpc Balance(BalanceRequest) returns (BalanceResponse) {}

  // Jobs
  rpc StorageConfigForJob(StorageConfigForJobRequest) returns (StorageConfigForJobResponse) {}
}
